# minibook

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: FindAgg.cmake  FindStb.cmake
licenses/: LICENSE.freetype.txt  LICENSE.png.txt
src/: Minibook.cpp
src/Constants/: Chars.hpp
src/Exceptions/: BadUnicodeData.hpp  FileNotOpened.hpp  FunctionFailed.hpp  UnknownEncoding.hpp
src/Implementations/: TrueTypeFont.cpp  TrueTypeFont.hpp
src/Interfaces/: Font.hpp  Stream.hpp
src/Streams/: CarriageReturnEater.cpp  CarriageReturnEater.hpp  CharLogger.cpp  CharLogger.hpp  FileReader.cpp  FileReader.hpp  ImageWriter.cpp  ImageWriter.hpp  LineUnwrapper.cpp  LineUnwrapper.hpp  Packager.cpp  Packager.hpp  PngWriter.cpp  PngWriter.hpp  Printer.cpp  Printer.hpp  StringLogger.cpp  StringLogger.hpp  Types.hpp  Typesetter.cpp  Typesetter.hpp  UnicodeDecoder.cpp  UnicodeDecoder.hpp  WordBreaker.cpp  WordBreaker.hpp  WordHyphenator.cpp  WordHyphenator.hpp
src/Structures/: Color.hpp  Glyph.hpp  Line.cpp  Line.hpp  Margin.hpp  Page.cpp  Page.hpp  Params.cpp  Params.hpp  Size.hpp
